--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ urllib3 = "^2.0.0"
 pendulum = "^2.1.2"
 weni-datalake-sdk = "0.2.2"
 gunicorn = "^21.2.0"
+djangorestframework = "^3.14.0"
+drf-spectacular = "^0.26.5"
+django-filter = "^23.5"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.16.1"
